--- a/web/src/main/assets/test.html
+++ b/web/src/main/assets/test.html
@@ -1,6 +1,9 @@
 <html>
 <head>
+    <script type="text/javascript" src="file:///android_asset/hivejsbridge.js"></script>
     <script type="text/javascript" src="file:///android_asset/test.js"></script>
+    <!-- <script type="text/javascript" src="hivejsbridge.js"></script>
+    <script type="text/javascript" src="test.js"></script> -->
 </head>
 <body>
     hello
